# nix

./: NIX_INSTALLER.md
install/: Cargo.toml
install/src/: default-nix-conf  directory.rs  main.rs  traits.rs  users.rs
installer-test/: .gitignore  README.md  default.nix  prepare.py  shell.nix  ssh  wootbuntu
nixconf/: Cargo.toml
nixconf/src/: lib.rs
