[package]
name = "nixconf"
version = "0.1.0"
authors = ["Alexander Schmolck <alexander.schmolck@smarkets.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "*"
generic-array = "*"
typenum = "*"
[dev-dependencies]
proptest = "*"
